Issue with the z-index solved

--- a/src/styles/home/navbar.module.scss
+++ b/src/styles/home/navbar.module.scss
@@ -8,6 +8,7 @@
   width: 100%;
   padding: 14px 23px;
   background-color: #fff;
+  z-index: 100;
 
   &::before {
     content: "";
